css/partials/_global.scss
html, body {
	font-family: 'Roboto Condensed', sans-serif;
	background: black;
	text-align: left;
	color: white;
	padding: 20px;
	padding-top: 40px;
	padding-right: 40px;
	font-size: 70px;
	font-weight: 300;
}

body {
	opacity: 0;
	&.active {
		opacity: 1;
		@include transition(opacity 0.2s);
	}
}

span.bold {
	font-weight: 700;
}
.weather, .subway {
	margin-bottom: 60px;
}

.clock .day {
	font-weight: bold;
}

.clock {
	margin-bottom: 65px;
	
	.dateLine {
		font-size: 36px;
		margin-bottom: 12px;
		.day {
// 			padding-right: 5px;
			text-align: left;
		}
	}
}

.clock .time {
	font-size: 70px;
	font-weight: bold;
	margin-bottom: 0px;
	> sup {
		font-size: 36px;
		margin-left: 5px;
// 		padding-bottom: 126px;
vertical-align: super;
		font-weight: 300!important;
	}
}

.weather {
	font-weight: bold;
	margin-bottom: 49px;
	&:before {
		margin-right: 20px;
		font-family: 'icomoon';
	}
	canvas {
		margin-top: 49px;
	}
}

.mbta {
	span.bold {
		float: right;
		
	}
	img {
		margin-right: 30px;
		margin-bottom: 5px;
	}
	
	.nextTrain {
		font-size: 70px;
		font-weight: bold;
	}
	
	.thenTrains {
		font-size: 36px;
		font-weight: 300;
// 		margin-top: 12px;
	}
	
}

.news {
	h3 {
		text-decoration: underline;
	}
	ul {
		position: relative;
		min-height: 100px;
		li {
			right: 0;
			top: 20px;
			opacity: 0;
			font-size: 36px;
			position: absolute;
			@include transition(opacity 0.5s);
			&.active {
				opacity: 1;
				@include transition(opacity 1s);
			}
		}
	}
}

